Fix benchmark bugs